--- a/level2.html
+++ b/level2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Verzamel irish coffees! LEVEL2</title>
-    <link rel="stylesheet" href="stylecoffee.css">
+    <link rel="stylesheet" href="./css/stylecoffee.css">
 </head>
 <body>
     <h2>Het is zaterdagavond of het diggiefeest. Verzamel zoveel mogelijk irish koffies</h2>
@@ -15,6 +15,6 @@
         </div>        
     </div>
     <h2>gebruik de rechter en linker pijljes om te bewegen. Met de spacebar verzamel je irish koffies </h2>
-    <script src="scriptlevel2.js"></script>
+    <script src="./js/scriptlevel2.js"></script>
 </body>
 </html>
