optimize css en js

--- a/level1.html
+++ b/level1.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <title>Verzamel irish coffees! LEVEL 1</title>
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/stylecoffee.css">
 </head>
 <body>
-    <h2>Het is zaterdagavond of het diggiefeest. Verzamel zoveel mogelijk irish koffies</h2>
+    <h2>Het is zaterdagavond op het diggiefeest. Verzamel zoveel mogelijk irish koffies</h2>
     <div id="game">
         <div id="background">
             <div id="hero"></div>                
@@ -15,6 +16,7 @@
         </div>        
     </div>
     <h2>gebruik de rechter en linker pijljes om te bewegen. Met de spacebar verzamel je irish koffies </h2>
+    <script src="./js/functions.js"></script>
     <script src="./js/scriptlevel1.js"></script>
 </body>
 </html>
