--- a/level3.html
+++ b/level3.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Verzamel irish coffees! LEVEL3</title>
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/stylemusic.css">
 </head>
 <body>
@@ -15,6 +16,7 @@
         </div>        
     </div>
     <h2>gebruik de rechter en linker pijljes om te bewegen. Met de spacebar verzamel je irish koffies </h2>
+    <script src="./js/functions.js"></script>
     <script src="./js/scriptlevel3.js"></script>
 </body>
 </html>
