--- a/level1.html
+++ b/level1.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Verzamel irish coffees! LEVEL 1</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>KoffieGame | Level 1</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/stylecoffee.css">
 </head>
 <body>
-    <h2>Het is zaterdagavond op het diggiefeest. Verzamel zoveel mogelijk irish koffies</h2>
+    <h2>Verzamel zoveel mogelijk koffies. Schiet de handjes uit de bakfiets om de koffies te verzamelen.</h2>
     <div id="game">
         <div id="background">
             <div id="hero"></div>                
             <div id="missiles"></div>
             <div id="enemies"></div>
-        <div id="text" class="blink"><h1>Press enter to start the game!</h1></div>
+        <div id="text" class="blink"><h1>Duw op enter om te starten</h1></div>
         </div>        
     </div>
-    <h2>gebruik de rechter en linker pijljes om te bewegen. Met de spacebar verzamel je irish koffies </h2>
+    <h2>gebruik de rechter en linker pijljes om te bewegen. met de spacebar schiet je handjes uit de bakfiets.</h2>
     <script src="./js/functions.js"></script>
     <script src="./js/scriptlevel1.js"></script>
 </body>
