--- a/level4.html
+++ b/level4.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>KoffieGame | Level 3</title>
+    <title>KoffieGame | Level 4</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/styleHeroGames.css">
     <link rel="stylesheet" href="./css/stylemusic.css">
 </head>
 <body>
-    <h2>Verzamel 10 koptelefoons. Als je er ééntje vangt, doe dan een dansje.</h2>
+    <h2>Verzamel 10 zwarte koptelefoons. Let op! als je een rode vangt, is het game over.</h2>
     <div id="game">
         <div id="background">
             <div id="hero"></div>                
             <div id="enemies"></div>
+            <div id="enemiesBad"></div>
             <div id="text" class="blink"><h1>Duw op enter om te starten</h1></div>
         </div>        
     </div>
     <h2>gebruik de rechter en linker pijljes om te bewegen.</h2>
     <script src="./js/functions.js"></script>
-    <script src="./js/scriptlevel3.js"></script>
+    <script src="./js/scriptlevel4.js"></script>
 </body>
 </html>
