--- a/index.html
+++ b/index.html
@@ -6,10 +6,52 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/styleIndex.css">
-    <title>KoffieGame</title>
+    <title>Koffie en koekjes</title>
 </head>
 <body>
-    <h2>Zin in een spelletje? Kies een level</h2>
+    <h1>Koffie en koekjes</h1>
+    <h2>Toe aan een pauze? Drink koffie, eet koekjes, speel een spelletje.</h2>
+    <div class="games">
+        <a href="./level1.html">
+            <div class="game">
+                <h4>koffies vangen I</h4>
+                <p>Verzamel zoveel mogelijk koffies. Schiet de handjes uit de bakfiets om de koffies te verzamelen.</p>
+            </div>
+        </a>
+        <a href="./level2.html">
+            <div class="game">
+                <h4>koffies vangen II</h4>
+                <p>Verzamel tien koffies, zonder er één te laten vallen. Vang de koffies op in de bak van je bakfiets.</p>
+            </div>
+        </a>
+        <a href="./level3.html">
+            <div class="game">
+                <h4>music mania I</h4>
+                <p>Verzamel tien koptelefoons, zonder er één te laten vallen. Als je er ééntje vangt, doe dan een dansje.</p>
+            </div>
+        </a>
+        <a href="./level4.html">
+            <div class="game">
+                <h4>music mania II</h4>
+                <p>Verzamel 10 zwarte koptelefoons. Let op! als je een rode vangt, is het game over.</p>
+            </div>
+        </a>
+        <!-- <a href="./level4.html">
+            <div class="game">
+                <h4>music mania II</h4>
+                <p>Verzamel 10 zwarte koptelefoons. Let op! als je een rode vangt, is het game over.</p>
+            </div>
+        </a>
+        <a href="./level4.html">
+            <div class="game">
+                <h4>music mania II</h4>
+                <p>Verzamel 10 zwarte koptelefoons. Let op! als je een rode vangt, is het game over.</p>
+            </div>
+        </a> -->
+    </div>
+    <footer>
+        <p>zelf aan de slag? clone mijn code op github</p>
+    </footer>
 
 </body>
 </html>
