--- a/level1.html
+++ b/level1.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>KoffieGame | Level 1</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/styleHeroGames.css">
     <link rel="stylesheet" href="./css/stylecoffee.css">
 </head>
 <body>
