--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
     <title>Koffie en koekjes</title>
 </head>
 <body>
-    <h1>Koffie en koekjes</h1>
-    <h2>Toe aan een pauze? Drink koffie, eet koekjes, speel een spelletje.</h2>
+    <div class="title">
+        <h1>Koffie en koekjes</h1>
+        <h2>Toe aan een pauze? Drink koffie, eet koekjes, speel een spelletje.</h2>
+    </div>
+    <div class="gameWrapper">
+
+
     <div class="games">
         <a href="./level1.html">
             <div class="game">
@@ -36,20 +41,11 @@
                 <p>Verzamel 10 zwarte koptelefoons. Let op! als je een rode vangt, is het game over.</p>
             </div>
         </a>
-        <!-- <a href="./level4.html">
-            <div class="game">
-                <h4>music mania II</h4>
-                <p>Verzamel 10 zwarte koptelefoons. Let op! als je een rode vangt, is het game over.</p>
-            </div>
-        </a>
-        <a href="./level4.html">
-            <div class="game">
-                <h4>music mania II</h4>
-                <p>Verzamel 10 zwarte koptelefoons. Let op! als je een rode vangt, is het game over.</p>
-            </div>
-        </a> -->
     </div>
+</div>
     <footer>
+        <p>made by Jana Verlinde</p>
+        <p>go to my website</p>
         <p>zelf aan de slag? clone mijn code op github</p>
     </footer>
 
