--- a/level1.html
+++ b/level1.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>KoffieGame | Level 1</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/styleHeroGames.css">
     <link rel="stylesheet" href="./css/stylecoffee.css">
+    <title>Koffie en koekjes | koffie I</title>
 </head>
 <body>
     <h2>Verzamel zoveel mogelijk koffies. Schiet de handjes uit de bakfiets om de koffies te verzamelen.</h2>
