--- a/level4.html
+++ b/level4.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>KoffieGame | Level 4</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/styleHeroGames.css">
     <link rel="stylesheet" href="./css/stylemusic.css">
+    <title>Koffie en koekjes | music II</title>
 </head>
 <body>
     <h2>Verzamel 10 zwarte koptelefoons. Let op! als je een rode vangt, is het game over.</h2>
