--- a/level2.html
+++ b/level2.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>KoffieGame | Level 2</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/styleHeroGames.css">
     <link rel="stylesheet" href="./css/stylecoffee.css">
+    <title>Koffie en koekjes | koffie II</title>
 </head>
 <body>
     <h2>Verzamel tien koffies. Vang de koffies op in de bak van je bakfiets. </h2>
