--- a/level3.html
+++ b/level3.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>KoffieGame | Level 3</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/styleHeroGames.css">
     <link rel="stylesheet" href="./css/stylemusic.css">
+    <title>Koffie en koekjes | Music I</title>
 </head>
 <body>
     <h2>Verzamel 10 koptelefoons. Als je er ééntje vangt, doe dan een dansje.</h2>
