navigatie en footer

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
         <footer>
             <p>(c) Jana Verlinde</p>
-            <p><a href="#">bezoek mijn website</a></p>
+            <p><a href="http://www.janaverlinde.be/" target="_blank" rel="noopener noreferrer">bezoek mijn website</a></p>
             <p><a href="https://github.com/Janaverl/invaders" target="_blank" rel="noopener noreferrer">Zelf aan de slag? Clone mijn code op github</a></p>
         </footer>
     </div>
