--- a/level1.html
+++ b/level1.html
@@ -24,21 +24,26 @@
     <div class="smallScreens">
     </div>
     <div class="navigate">
-        <a href="./index.html">home</a>
+            <a href="./index.html">home</a>
+            <div class="instructions">
+                    <p>Verzamel zoveel mogelijk koffies. Schiet de handjes uit de bakfiets om de koffies te verzamelen.</p>
+                    <p>Gebruik de rechter en linker pijljes om te bewegen. met de spacebar schiet je handjes uit de bakfiets.</p>
+                </div>
         <a href="./level1.html">replay</a>
-    </div>
-    <div class="instructions">
-        <p>Verzamel zoveel mogelijk koffies. Schiet de handjes uit de bakfiets om de koffies te verzamelen.</p>
-        <p>Gebruik de rechter en linker pijljes om te bewegen. met de spacebar schiet je handjes uit de bakfiets.</p>
     </div>
     <div id="game">
         <div id="background">
             <div id="hero"></div>                
             <div id="missiles"></div>
             <div id="enemies"></div>
-        <div id="text" class="blink"><h1>Duw op enter om te starten</h1></div>
+            <div id="text" class="blink"><h1>Duw op enter om te starten</h1></div>
         </div>        
     </div>
+    <footer>
+        <p>(c) Jana Verlinde</p>
+        <p><a href="http://www.janaverlinde.be/" target="_blank" rel="noopener noreferrer">bezoek mijn website</a></p>
+        <p><a href="https://github.com/Janaverl/invaders" target="_blank" rel="noopener noreferrer">Zelf aan de slag? Clone mijn code op github</a></p>
+    </footer>
     <script src="./js/functions.js"></script>
     <script src="./js/scriptlevel1.js"></script>
 </body>
