--- a/level4.html
+++ b/level4.html
@@ -23,13 +23,14 @@
 <body>
     <div class="smallScreens">
     </div>
+
     <div class="navigate">
         <a href="./index.html">home</a>
+        <div class="instructions">
+            <p>Verzamel 10 zwarte koptelefoons. Let op! als je een rode vangt, is het game over.</p>
+            <p>Gebruik de rechter en linker pijljes om te bewegen.</p>
+        </div>
         <a href="./level4.html">replay</a>
-    </div>
-    <div class="instructions">
-        <p>Verzamel 10 zwarte koptelefoons. Let op! als je een rode vangt, is het game over.</p>
-        <p>Gebruik de rechter en linker pijljes om te bewegen.</p>
     </div>
     <div id="game">
         <div id="background">
@@ -39,6 +40,12 @@
             <div id="text" class="blink"><h1>Duw op enter om te starten</h1></div>
         </div>        
     </div>
+
+    <footer>
+        <p>(c) Jana Verlinde</p>
+        <p><a href="http://www.janaverlinde.be/" target="_blank" rel="noopener noreferrer">bezoek mijn website</a></p>
+        <p><a href="https://github.com/Janaverl/invaders" target="_blank" rel="noopener noreferrer">Zelf aan de slag? Clone mijn code op github</a></p>
+    </footer>
     
     <script src="./js/functions.js"></script>
     <script src="./js/scriptlevel4.js"></script>
