--- a/level3.html
+++ b/level3.html
@@ -23,13 +23,14 @@
 <body>
     <div class="smallScreens">
     </div>
+
     <div class="navigate">
-            <a href="./index.html">home</a>
-            <a href="./level3.html">replay</a>
+        <a href="./index.html">home</a>
+        <div class="instructions">
+            <p>Verzamel 10 koptelefoons. Als je er ééntje vangt, doe dan een dansje.</p>
+            <p>Gebruik de rechter en linker pijljes om te bewegen.</p>
         </div>
-    <div class="instructions">
-        <p>Verzamel 10 koptelefoons. Als je er ééntje vangt, doe dan een dansje.</p>
-        <p>Gebruik de rechter en linker pijljes om te bewegen.</p>
+        <a href="./level3.html">replay</a>
     </div>
     <div id="game">
         <div id="background">
@@ -38,6 +39,12 @@
             <div id="text" class="blink"><h1>Duw op enter om te starten</h1></div>
         </div>        
     </div>
+
+    <footer>
+        <p>(c) Jana Verlinde</p>
+        <p><a href="http://www.janaverlinde.be/" target="_blank" rel="noopener noreferrer">bezoek mijn website</a></p>
+        <p><a href="https://github.com/Janaverl/invaders" target="_blank" rel="noopener noreferrer">Zelf aan de slag? Clone mijn code op github</a></p>
+    </footer>
     
     <script src="./js/functions.js"></script>
     <script src="./js/scriptlevel3.js"></script>
